better day and shift person selection